--- a/src/back-end/UserLayer/Services/NotificationService/Compose/compose.notification-api.override.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/Compose/compose.notification-api.override.yaml
@@ -13,13 +13,13 @@ services:
       Mongo__DeliveryLogsCollection: delivery_logs
 
       # CORS
-      Cors__AllowedOrigins: http://localhost:5173,https://stls.local
+      Cors__AllowedOrigins: http://localhost:5173,https://uniwa-stls.local
       Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE,OPTIONS
       Cors__AllowedHeaders: Content-Type,Authorization
 
       # JWT
-      Jwt__Issuer: http://stls_backend:8080
-      Jwt__Audience: http://stls_backend:8080
+      Jwt__Issuer: http://uniwa-stls-backend:8080
+      Jwt__Audience: http://uniwa-stls-backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
 
       # Email (SMTP)  
@@ -54,7 +54,7 @@ services:
       ### Log
       RabbitMQ__Exchanges__Log: LOG.EXCHANGE
 
-      RabbitMQ__RoutingKeys__Log__Notification: log.user.notification-service.{type}
+      RabbitMQ__RoutingKeys__Log__Notification: log.user.notification-api.{type}
 
     depends_on:
       notification-db:
