--- a/src/back-end/LogLayer/Services/LogService/Compose/compose.log-api.override.yaml
+++ b/src/back-end/LogLayer/Services/LogService/Compose/compose.log-api.override.yaml
@@ -14,13 +14,13 @@ services:
       Mongo__Collections__FailoverLogs: failover_logs
 
       # CORS
-      Cors__AllowedOrigins: http://localhost:5173,https://stls.local
+      Cors__AllowedOrigins: http://localhost:5173,https://uniwa-stls.local
       Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE,OPTIONS
       Cors__AllowedHeaders: Content-Type,Authorization
 
       # JWT
-      Jwt__Issuer: http://stls_backend:8080
-      Jwt__Audience: http://stls_backend:8080
+      Jwt__Issuer: http://uniwa-stls-backend:8080
+      Jwt__Audience: http://uniwa-stls-backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
 
       # RabbitMQ
@@ -33,7 +33,7 @@ services:
 
       ## Exchanges, Queues, Routing Keys
       RabbitMQ__Exchanges__Log: LOG.EXCHANGE
-      RabbitMQ__Queues__Log: log.queue
+      RabbitMQ__Queues__Log: services-2-log.queue
       RabbitMQ__RoutingKeys__Log__0: log.sensor.#
       RabbitMQ__RoutingKeys__Log__1: log.traffic.#
       RabbitMQ__RoutingKeys__Log__2: log.user.#
