--- a/src/back-end/TrafficLayer/Services/TrafficLightControllerService/Compose/Ekklisia/compose.traffic-light-controller.korytsas403.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightControllerService/Compose/Ekklisia/compose.traffic-light-controller.korytsas403.yaml
@@ -38,15 +38,15 @@ services:
       Redis__TrafficLight__KeyPrefix__Heartbeat: traffic_light:{intersection}:{light}:heartbeat
 
       # CORS
-      Cors__AllowedOrigins: http://localhost:5173,https://stls.local
+      Cors__AllowedOrigins: http://localhost:5173,https://uniwa-stls.local
       Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE,OPTIONS
       Cors__AllowedHeaders: Content-Type,Authorization
 
       # JWT
-      Jwt__Issuer: http://stls_backend:8080
-      Jwt__Audience: http://stls_backend:8080
+      Jwt__Issuer: http://uniwa-stls-backend:8080
+      Jwt__Audience: http://uniwa-stls-backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
-
+      
       # RabbitMQ
       ## Configuration
       RabbitMQ__Host: rabbitmq
