--- a/src/back-end/UserLayer/Services/UserService/Compose/compose.user-api.override.yaml
+++ b/src/back-end/UserLayer/Services/UserService/Compose/compose.user-api.override.yaml
@@ -3,23 +3,24 @@ services:
     ports:
       - '5055:8080'
     environment:
+      # ASP.NET Core
       ASPNETCORE_ENVIRONMENT: Development
       ASPNETCORE_URLS: http://+:8080
 
-      # UserDB (MSSQL)
-      MSSQL__ConnectionString: Server=user-db,1433;Database=UserDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
-
       # CORS
-      Cors__AllowedOrigins: http://localhost:5173,https://stls.local
+      Cors__AllowedOrigins: http://localhost:5173,https://uniwa-stls.local
       Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE,OPTIONS
       Cors__AllowedHeaders: Content-Type,Authorization
 
       # JWT
-      Jwt__Issuer: http://stls_backend:8080
-      Jwt__Audience: http://stls_backend:8080
+      Jwt__Issuer: http://uniwa-stls-backend:8080
+      Jwt__Audience: http://uniwa-stls-backend:8080
       Jwt__Key: Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km
 
-      # RabbitMQ
+      # Database
+      MSSQL__ConnectionString: Server=user-db,1433;Database=UserDB;User Id=sa;Password=MyPass@word;TrustServerCertificate=True
+
+      # Message Broker
       ## Configuration
       RabbitMQ__Host: rabbitmq
       RabbitMQ__VirtualHost: /
@@ -27,18 +28,17 @@ services:
       RabbitMQ__Username: rabbitmq
       RabbitMQ__Password: rabbitmq123
 
-      ## Exchanges & Routing Keys
-      ### User
-      RabbitMQ__Exchanges__User: USER.EXCHANGE
+      ## Exchanges
+      RabbitMQ__Exchanges__User: "USER.EXCHANGE"
+      RabbitMQ__Exchanges__Log: "LOG.EXCHANGE"
 
-      RabbitMQ__Queues__User__Notification: notification-2-user.queue
-      RabbitMQ__RoutingKeys__UserNotifications: user.notification.{type}
-      
-      ### Log
-      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
-      
-      RabbitMQ__RoutingKeys__Log__User: log.user.user-service.{type}
-    
+      ## Queues
+      RabbitMQ__Queues__User__Notifications: "notification-2-user.queue"
+
+      ## Routing Keys
+      RabbitMQ__RoutingKeys__User__NotificationRequests: "user.notification.request"
+      RabbitMQ__RoutingKeys__Log__User: "log.user.user.{type}"
+
     depends_on:
       user-db:
         condition: service_started
