--- a/src/front-end/stls-ui/package.json
+++ b/src/front-end/stls-ui/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@tailwindcss/vite": "^4.1.12",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "leaflet": "^1.9.4",
     "leaflet-arrowheads": "^1.4.0",
     "pinia": "^3.0.3",
+    "recharts": "^3.3.0",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.6.3",
+    "vuetify": "^3.10.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
