--- a/src/back-end/UserLayer/Services/NotificationService/Compose/compose.notification-api.override.yaml
+++ b/src/back-end/UserLayer/Services/NotificationService/Compose/compose.notification-api.override.yaml
@@ -41,17 +41,18 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       ## Exchanges
-      RabbitMQ__Exchanges__User: "USER.EXCHANGE"
-      RabbitMQ__Exchanges__Log: "LOG.EXCHANGE"
+      RabbitMQ__Exchanges__User: USER.EXCHANGE
+      RabbitMQ__Exchanges__Traffic: TRAFFIC.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
 
       ## Queues
-      RabbitMQ__Queues__User__NotificationRequests: "requests-2-notification.queue"
-      RabbitMQ__Queues__Traffic__Analytics: "analytics-2-notification.queue"
+      RabbitMQ__Queues__User__NotificationRequests: requests-2-notification.queue
+      RabbitMQ__Queues__Traffic__Analytics: analytics-2-notification.queue
 
       ## Routing Keys
-      RabbitMQ__RoutingKeys__User__Notifications: "user.notification.{type}"
-      RabbitMQ__RoutingKeys__Traffic__Analytics: "traffic.analytics.{intersection}.{metric}"
-      RabbitMQ__RoutingKeys__Log__User: "log.user.notification-api.{type}"
+      RabbitMQ__RoutingKeys__User__Notifications: user.notification.request
+      RabbitMQ__RoutingKeys__Traffic__Analytics: traffic.analytics.{intersection}.{metric}
+      RabbitMQ__RoutingKeys__Log__User: log.user.notification-api.{type}
 
     depends_on:
       notification-db:
