--- a/src/back-end/UserLayer/Services/UserService/Compose/compose.user-api.override.yaml
+++ b/src/back-end/UserLayer/Services/UserService/Compose/compose.user-api.override.yaml
@@ -30,15 +30,12 @@ services:
       RabbitMQ__Password: rabbitmq123
 
       ## Exchanges
-      RabbitMQ__Exchanges__User: "USER.EXCHANGE"
-      RabbitMQ__Exchanges__Log: "LOG.EXCHANGE"
-
-      ## Queues
-      RabbitMQ__Queues__User__Notifications: "notification-2-user.queue"
+      RabbitMQ__Exchanges__User: USER.EXCHANGE
+      RabbitMQ__Exchanges__Log: LOG.EXCHANGE
 
       ## Routing Keys
-      RabbitMQ__RoutingKeys__User__NotificationRequests: "user.notification.request"
-      RabbitMQ__RoutingKeys__Log__User: "log.user.user-api.{type}"
+      RabbitMQ__RoutingKeys__User__NotificationRequests: user.notification.request
+      RabbitMQ__RoutingKeys__Log__User: log.user.user-api.{type}
 
     depends_on:
       user-db:
