--- a/src/front-end/stls-ui/package.json
+++ b/src/front-end/stls-ui/package.json
@@ -12,6 +12,7 @@
     "@mdi/font": "^7.4.47",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.12.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-arrowheads": "^1.4.0",
     "pinia": "^3.0.3",
