--- a/src/back-end/TrafficLayer/Services/TrafficLightControllerService/Compose/Ekklisia/compose.traffic-light-controller.korytsas403.yaml
+++ b/src/back-end/TrafficLayer/Services/TrafficLightControllerService/Compose/Ekklisia/compose.traffic-light-controller.korytsas403.yaml
@@ -60,7 +60,7 @@ services:
       RabbitMQ__Exchanges__Log: LOG.EXCHANGE
 
       ## Queues
-      RabbitMQ__Queues__Traffic__LightControl: intersection-controller-2-traffic-light-controller.queue
+      RabbitMQ__Queues__Traffic__LightControl: intersection-controller-2-traffic-light-controller.{intersection}.{light}.queue
 
       ## Routing Keys
       RabbitMQ__RoutingKeys__Traffic__LightControl: traffic.light.control.{intersection}.{light}
