--- a/src/back-end/LogLayer/Services/LogService/Compose/compose.log-api.override.yaml
+++ b/src/back-end/LogLayer/Services/LogService/Compose/compose.log-api.override.yaml
@@ -45,6 +45,7 @@ services:
       RabbitMQ__Queues__Log__Sensor: sensor-2-log.queue
 
       ## Routing Keys
+      ### Consume
       RabbitMQ__RoutingKeys__Log__User: log.user.#
       RabbitMQ__RoutingKeys__Log__Traffic: log.traffic.#
       RabbitMQ__RoutingKeys__Log__Sensor: log.sensor.#
