--- a/src/back-end/SensorLayer/Services/SensorService/Compose/compose.sensor-api.agiou-spyridonos.yaml
+++ b/src/back-end/SensorLayer/Services/SensorService/Compose/compose.sensor-api.agiou-spyridonos.yaml
@@ -62,8 +62,9 @@ services:
       RabbitMQ__Exchanges__Log: LOG.EXCHANGE
 
       ## Routing Keys
+      ### Publish
       RabbitMQ__RoutingKeys__Sensor__SensorCount: sensor.count.{intersection}.{count}
-      RabbitMQ__RoutingKeys__Log__Sensor: log.sensor.sensor-api.{type}
+      RabbitMQ__RoutingKeys__Log__Sensor: log.{layer}.{service}.{type}
 
     networks:
       - detection-network
