--- a/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.dytiki-pyli.yaml
+++ b/src/back-end/TrafficLayer/Services/IntersectionControllerService/Compose/compose.intersection-controller.dytiki-pyli.yaml
@@ -15,6 +15,16 @@ services:
       Intersection__Id: 3
       Intersection__Name: Dytiki Pyli
 
+      # ============================
+      # Traffic Lights Managed by this Controller
+      # ============================
+      TrafficLights__0__Id: 301
+      TrafficLights__0__Name: Dytiki Pyli
+      TrafficLights__1__Id: 302
+      TrafficLights__1__Name: Dimitsanas North
+      TrafficLights__2__Id: 303
+      TrafficLights__2__Name: Dimitsanas South
+
       # TrafficLightCacheDB (Redis)
       Redis__TrafficLight__Host: traffic-light-cache-db
       Redis__TrafficLight__Port: 6379
