--- a/src/front-end/stls-ui/src/.env.development
+++ b/src/front-end/stls-ui/src/.env.development
@@ -1,3 +1,4 @@
 VITE_USER_API=http://localhost:5055
 VITE_NOTIFICATION_API=http://localhost:5087
 VITE_LOG_API=http://localhost:5005
+VITE_ANALYTICS_API=http://localhost:5208
