--- a/src/front-end/stls-ui/package.json
+++ b/src/front-end/stls-ui/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^7.4.47",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-arrowheads": "^1.4.0",
@@ -20,6 +21,7 @@
     "recharts": "^3.3.0",
     "tailwindcss": "^4.1.12",
     "vue": "^3.5.18",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.6.3",
     "vuetify": "^3.10.5"
   },
