time to replace simulation..

--- a/src/front-end/stls-ui/src/.env.development
+++ b/src/front-end/stls-ui/src/.env.development
@@ -2,3 +2,9 @@ VITE_USER_API=http://localhost:5055
 VITE_NOTIFICATION_API=http://localhost:5087
 VITE_LOG_API=http://localhost:5005
 VITE_ANALYTICS_API=http://localhost:5208
+VITE_COORDINATOR_API=http://localhost:5020
+
+# Traffic Light Controllers
+# Example: Agiou Spyridonos -> 5261, Anatoliki Pyli -> 5262, etc.
+VITE_TRAFFIC_LIGHT_CONTROLLER_BASE=http://localhost
+VITE_TRAFFIC_LIGHT_CONTROLLER_PORT_START=5261
