intersection controller done

--- a/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detection-api.secret.yaml
+++ b/src/back-end/SensorLayer/Services/DetectionService/K8s/k8s.detection-api.secret.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: detectionapi-secret
+  name: detection-api-secret
   namespace: uniwa-stls
 type: Opaque
 stringData:
-  MONGO_ROOT_USERNAME: "mongo"
-  MONGO_ROOT_PASSWORD: "mongo123"
-  RABBITMQ_USERNAME: "rabbitmq"
-  RABBITMQ_PASSWORD: "rabbitmq123"
-  REDIS_PASSWORD: ""
-  JWT_KEY: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
+  Jwt__Key: "Nn7kLa8Rzv1XHt9UwMqP4YbFdJxVt2Km"
+  Mongo__ConnectionString: "mongodb://mongo:mongo123@detection-db:27017/"
+  RabbitMQ__Username: "rabbitmq"
+  RabbitMQ__Password: "rabbitmq123"
+
