--- a/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.config.yaml
+++ b/src/back-end/LogLayer/Services/LogService/K8s/k8s.log-api.config.yaml
@@ -4,31 +4,45 @@ metadata:
   name: log-api-config
   namespace: uniwa-stls
 data:
-  ASPNETCORE_ENVIRONMENT: "Development"
-  ASPNETCORE_URLS: "http://+:8080"
-  SERVICE_LAYER: "Log"
-  SERVICE_LEVEL: "Cloud"
-  SERVICE_NAME: "Log"
+  # ASP.NET Core
+  ASPNETCORE_ENVIRONMENT: Development
+  ASPNETCORE_URLS: http://+:8080
+  SERVICE_LAYER: Log
+  SERVICE_LEVEL: Cloud
+  SERVICE_NAME: Log
 
-  Cors__AllowedOrigins: "http://localhost:5173,https://uniwa-stls.local"
-  Cors__AllowedMethods: "GET,POST,PUT,PATCH,DELETE,OPTIONS"
-  Cors__AllowedHeaders: "Content-Type,Authorization"
+  # CORS
+  Cors__AllowedOrigins: http://localhost:5173,https://uniwa-stls.local
+  Cors__AllowedMethods: GET,POST,PUT,PATCH,DELETE,OPTIONS
+  Cors__AllowedHeaders: Content-Type,Authorization
 
-  Jwt__Issuer: "http://uniwa-stls-backend:8080"
-  Jwt__Audience: "http://uniwa-stls-backend:8080"
+  # JWT
+  Jwt__Issuer: http://uniwa-stls-backend:8080
+  Jwt__Audience: http://uniwa-stls-backend:8080
 
-  Mongo__Database: "LogDB"
-  Mongo__Collections__AuditLogs: "audit_logs"
-  Mongo__Collections__ErrorLogs: "error_logs"
-  Mongo__Collections__FailoverLogs: "failover_logs"
+  # Databases
+  ## LogDB
+  Mongo__Database: LogDB
+  Mongo__Collections__AuditLogs: audit_logs
+  Mongo__Collections__ErrorLogs: error_logs
+  Mongo__Collections__FailoverLogs: failover_logs
 
-  RabbitMQ__Host: "rabbitmq"
-  RabbitMQ__VirtualHost: "/"
+  # Message Broker
+  ## Configuration
+  RabbitMQ__Host: rabbitmq
+  RabbitMQ__VirtualHost: /
   RabbitMQ__Port: "5672"
-  RabbitMQ__Exchanges__Log: "LOG.EXCHANGE"
-  RabbitMQ__Queues__Log__User: "user-2-log.queue"
-  RabbitMQ__Queues__Log__Traffic: "traffic-2-log.queue"
-  RabbitMQ__Queues__Log__Sensor: "sensor-2-log.queue"
-  RabbitMQ__RoutingKeys__Log__User: "log.user.#"
-  RabbitMQ__RoutingKeys__Log__Traffic: "log.traffic.#"
-  RabbitMQ__RoutingKeys__Log__Sensor: "log.sensor.#"
+
+  ## Exchanges
+  RabbitMQ__Exchanges__Log: LOG.EXCHANGE
+
+  ## Queues
+  RabbitMQ__Queues__Log__User: user-2-log.queue
+  RabbitMQ__Queues__Log__Traffic: traffic-2-log.queue
+  RabbitMQ__Queues__Log__Sensor: sensor-2-log.queue
+
+  ## Routing Keys
+  ### Consume
+  RabbitMQ__RoutingKeys__Log__User: log.user.#
+  RabbitMQ__RoutingKeys__Log__Traffic: log.traffic.#
+  RabbitMQ__RoutingKeys__Log__Sensor: log.sensor.#
